tests/baselines/reference/decoratorOnClassProperty6(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decoratorOnClassProperty6.ts(4,6): error TS1240: Unable to resolve signature of property decorator when called as an expression.
  The runtime will invoke the decorator with 2 arguments, but the decorator expects 1.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decoratorOnClassProperty6.ts (1 errors) ====
    declare function dec(target: Function): void;
    
    class C {
        @dec prop;
         ~~~
!!! error TS1240: Unable to resolve signature of property decorator when called as an expression.
!!! error TS1240:   The runtime will invoke the decorator with 2 arguments, but the decorator expects 1.
    }